--- a/tdnoter.html
+++ b/tdnoter.html
@@ -3,13 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>TD noté</title>
+
+    <!--Feuilles de style-->
     <link rel="stylesheet" href="csstd.css">
+
+    <!--FrameWorks HTML/CSS pour affichage-->
+    <!--Aucun des frameworks est utilisés dans le jeu ! :) -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-pink.min.css" />
+
 </head>
 <body>
 
-<canvas id="Canvas" width="500" height="500" style="border:1px solid #000000;">
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+    Débuter le jeu !
+</button>
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="">
+    Règles du jeu !
+</button>
+
+
+
+<div class="info">
+    <h2>Projet de DURAND Antoine / SERRAND Yannis / JAMMES Yannick</h2>
+    <br>
+    <p>Le jeu se lance après 20 secondes au lancement de la page Web !</p>
+    <br>
+    <p>Le but du Jeu survivre le plus longtemps possible au ennemis qui vous fonce dessus ! <br>
+    Tirer avec Click gauche !
+        <br>Déplacez-vous avec les flèches directionnelles !
+    <br> ---> Si un ennemi vous touche vous perdrez automatiquement
+        <br>
+        Bonne chance aventurier !
+    </p>
+</div>
+
+
+<canvas id="Canvas" style="border:1px solid #000000;">
 </canvas>
 
 <script src="functiontd.js"></script>
+
+
+<!--FrameWork JS pour affichage (Modal, Core du Framework HTML/CSS MDL -->
+<!--Aucun des frameworks est utilisés dans le jeu ! :) -->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
 </body>
 </html>
