--- a/tdnoter.html
+++ b/tdnoter.html
@@ -15,40 +15,38 @@
 </head>
 <body>
 
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+<!--EMPLACEMENT DU CANVAS ICI SAUF QUE JE METS AVEC CSS DANS LE DOM DIRECT -->
+
+<br class="padding">
+<!--ALERTES EN CSS ET JAVASCRIPTS POUR LES COMMANDES ET TOUS DES LE DEBUT -->
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent button-start" id="start" Onclick="Main()">
     Débuter le jeu !
 </button>
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="">
-    Règles du jeu !
-</button>
-
-
-
-<div class="info">
-    <h2>Projet de DURAND Antoine / SERRAND Yannis / JAMMES Yannick</h2>
-    <br>
-    <p>Le jeu se lance après 20 secondes au lancement de la page Web !</p>
-    <br>
-    <p>Le but du Jeu survivre le plus longtemps possible au ennemis qui vous fonce dessus ! <br>
-    Tirer avec Click gauche !
-        <br>Déplacez-vous avec les flèches directionnelles !
-    <br> ---> Si un ennemi vous touche vous perdrez automatiquement
-        <br>
-        Bonne chance aventurier !
-    </p>
+<br>
+<br class="padding">
+</body>
+<footer>
+<div class="alert">
+    <span class="closebtn">&times;</span>
+    <strong>Projet de Javascript</strong> DURAND Antoine - JAMMES Yannick - SERRAND Yannis.
 </div>
 
+<div class="alert objjeu">
+    <span class="closebtn">&times;</span>
+    <strong>Objectif du jeu :</strong> Survivre au ennemis. Ne pas se faire toucher par les ennemis.
+</div>
 
-<canvas id="Canvas" style="border:1px solid #000000;">
-</canvas>
+<div class="alert controlejeu">
+    <span class="closebtn">&times;</span>
+    <strong>Commandes du jeu : </strong> <br> -Déplacement : flèches directionelles <br> -Tirer : click gauche
+</div>
+</footer>
 
+<!--Nos scripts Javascript Ici -->
 <script src="functiontd.js"></script>
-
 
 <!--FrameWork JS pour affichage (Modal, Core du Framework HTML/CSS MDL -->
 <!--Aucun des frameworks est utilisés dans le jeu ! :) -->
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-</body>
 </html>
