Jeu MENU FINI + MOUVEMENT FINI

--- a/tdnoter.html
+++ b/tdnoter.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-pink.min.css" />
 
 </head>
-<body>
+<body onmousemove="positionSouris(event);">
 
 <!--EMPLACEMENT DU CANVAS ICI SAUF QUE JE METS AVEC CSS DANS LE DOM DIRECT -->
 
